force-app/main/default/objects/Invoice_Line_Item__c/fields/Amount_Excl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excl_Tax__c</fullName>
    <formula>Quantity__c * Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Excl Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>