force-app/main/default/objects/Invoice_Line_Item__c/fields/Amount_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excluding_Tax__c</fullName>
    <formula>if(
    Invoice__r.RecordType.Name = &apos;Primary Invoice&apos; ,
    Total_Amount__c - ( CGST_Amount__c +  IGST_Amount__c +  SGST_Amount__c ),
    Total_Amount__c 
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Excluding Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>