force-app/main/default/objects/Invoice_Line_Item__c/fields/Basic_Net_Amt__c.field-meta.xml
<CustomField>
    <fullName>Basic_Net_Amt__c</fullName>
    <formula>Amount_Excl_Tax__c -  Total_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basic Net Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>