force-app/main/default/objects/Invoice_Line_Item__c/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <label>CGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>