force-app/main/default/objects/Invoice_Line_Item__c/fields/Discount_2_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_2_Type__c</fullName>
    <label>Discount 2 Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>