force-app/main/default/objects/Invoice_Line_Item__c/fields/Good_receipt_note__c.field-meta.xml
<CustomField>
    <fullName>Good_receipt_note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Good receipt note</label>
    <referenceTo>Good_receipt_notes__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>