force-app/main/default/objects/Invoice_Line_Item__c/fields/GRN_Comment__c.field-meta.xml
<CustomField>
    <fullName>GRN_Comment__c</fullName>
    <label>GRN Comment</label>
    <type>TextArea</type>
</CustomField>