force-app/main/default/objects/Invoice_Line_Item__c/fields/IGST_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IGST_Percentage__c</fullName>
    <label>IGST Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>