force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Key__c</fullName>
    <label>Invoice Line Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>