force-app/main/default/objects/Invoice_Line_Item__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>if( Invoice__r.Invoice_Number__c != NULL,
    Invoice__r.Invoice_Number__c,
    Invoice__r.Name 
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>