force-app/main/default/objects/Invoice_Line_Item__c/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <formula>Product__r.Product_Brand__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Brand</label>
    <type>Text</type>
</CustomField>