force-app/main/default/objects/Invoice_Line_Item__c/fields/Product_HSN__c.field-meta.xml
<CustomField>
    <fullName>Product_HSN__c</fullName>
    <formula>Product__r.HSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product HSN</label>
    <type>Text</type>
</CustomField>