force-app/main/default/objects/Invoice_Line_Item__c/fields/Product_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_of_Measure__c</fullName>
    <formula>TEXT(Product__r.Unit_of_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit of Measure</label>
    <type>Text</type>
</CustomField>