force-app/main/default/objects/Invoice_Line_Item__c/fields/Promo_Min_Qty__c.field-meta.xml
<CustomField>
    <fullName>Promo_Min_Qty__c</fullName>
    <label>Promo Min Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>