force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_Scheme_Applied__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scheme_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quantity Scheme Applied</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>