force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_Scheme_Applied_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scheme_Applied_Discount_Percent__c</fullName>
    <formula>Quantity_Scheme_Applied__r.Discount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Scheme Applied Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>