force-app/main/default/objects/Invoice_Line_Item__c/fields/Quantity_Scheme_Applied_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Scheme_Applied_Type__c</fullName>
    <formula>TEXT(Quantity_Scheme_Applied__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Scheme Applied Type</label>
    <type>Text</type>
</CustomField>