force-app/main/default/objects/Invoice_Line_Item__c/fields/Scheme_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Discount_Amount__c</fullName>
    <label>Scheme Discount Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>