force-app/main/default/objects/Invoice_Line_Item__c/fields/SKU_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>SKU_Discount_Percent__c</fullName>
    <label>SKU Discount %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>