force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>