force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_Amount_Incl_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_Tax__c</fullName>
    <formula>(Amount_Excl_Tax__c +  Total_Tax__c) -  Total_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Incl Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>