force-app/main/default/objects/Invoice_Line_Item__c/fields/Total_MRP__c.field-meta.xml
<CustomField>
    <fullName>Total_MRP__c</fullName>
    <label>Total MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>